AM_MAKEINFOHTMLFLAGS = --no-split

info_TEXINFOS = harp.texi
harp_TEXINFOS = version.texi

dist_man_MANS = man1/harp.1 man3/harp_errors.3 man3/harp_singleton.3 man3/harp_cons.3 man3/harp_concat.3 man3/harp_last.3 man3/harp_append.3 man3/harp_length.3 man3/harp_free_list.3 man3/harp_duplicate.3 man3/harp_find_element.3 man3/harp_read_configs.3 man3/harp_write_configs.3 man3/harp_duplicate_functions.3 man3/harp_make_functions.3 man3/harp_free_functions.3 man3/harp_cons_functions.3 man3/harp_merge_configs.3 man3/harp_get_ports.3
